# claude-operator-stack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.es.md  README.ja.md  README.md  README.pt-br.md  README.ru.md  README.tr.md  README.zh.md  SECURITY.md  install.sh  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.planning/: PROJECT.md
case-studies/: README.md  ai-legal-tool.md  niche-booking-trio.md  whatsapp-b2b-saas.md  youtube-pipeline.md
commands/: README.md  anonymise-case-study.md  bridge-context.md  cost-rollup.md  ship-day.md  solo-monday-review.md  sync-brain.md
configs/: README.md  mcp-servers.json.example  settings.json.example
cookbook/: 01-claude-code-from-zero.md  02-stripe-connect-p2p.md  03-whatsapp-cloud-api-webhook.md  04-cloudflare-argo-local-dev.md  05-ga4-cloudflare-analytics.md  06-sentry-fullstack.md  07-supabase-vercel-pooling.md  08-ytdlp-whisper-research.md  09-telegram-bot-leads-v0.md  10-mercado-pago-latam.md  11-scheduled-prompts-cron.md  12-content-cross-post-pipeline.md  README.md
credits/: README.md
docs/: README.md  comparing-stacks.md  v1-changelog-deep-dive.md  whats-inside.md  why-only-claude-code.md
profiles/: README.md  content-creator-operator.md  (+3 more)
scaffolds/whatsapp-saas/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README-deploy.md  README.md  docker-compose.yml  pyproject.toml
scaffolds/whatsapp-saas/app/: __init__.py  classifier.py  deps.py  main.py  models.py  reply.py  webhook.py
scaffolds/whatsapp-saas/tests/: conftest.py  test_reply.py  test_webhook.py
(+107 files in other folders)
